--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>Heurican's page</title>
 </head>
 <body>
 
 <h1>This page is under construction!</h1>
 <p>By Heurican.</p>
 
+<a href="github.com/heurican"> <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png"> </a>
 </body>
 </html>
