fixed link and size of the pic

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <h1>This page is under construction!</h1>
 <p>By Heurican.</p>
 
-<a href="github.com/heurican"> <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png"> </a>
+<a href="www.github.com/heurican"> <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png", width="256", height="256"> </a>
 </body>
 </html>
