--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+    <LINK REL=StyleSheet HREF="index.css" TYPE="text/css" MEDIA=screen>
 <head>
 <title>Heurican's page</title>
 </head>
@@ -7,7 +8,8 @@
 
 <h1>This page is under construction!</h1>
 <p>By Heurican.</p>
-
-<a href="www.github.com/heurican"> <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png", width="256", height="256"> </a>
+<div class="link">
+    <a href="www.github.com/heurican"> <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png", width="256", height="256"> </a>
+</div>
 </body>
 </html>
