--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <h1>This page is under construction!</h1>
 <p>By Heurican.</p>
 <div class="link">
-    <a href="www.github.com/heurican"> <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png", width="256", height="256"> </a>
+    <a href="https://www.github.com/heurican"> <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png", width="256", height="256"> </a>
 </div>
 </body>
 </html>
