made some changes to styling, made it a bit lighter

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <LINK REL=StyleSheet HREF="index.css" TYPE="text/css" MEDIA=screen>
 <head>
-<title>Heurican's page</title>
+<title>Under construction</title>
 </head>
 <body>
 
