--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
 
 <h1>This page is under construction!</h1>
 <p>By Heurican.</p>
-<div class="link">
+<div id="link">
     <a href="https://www.github.com/heurican"> <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png"> </a>
 </div>
+<div id="button">
+    <button type="button">Click Me!</button>
+</div>
+
 </body>
 </html>
