--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <LINK REL=StyleSheet HREF="index.css" TYPE="text/css" MEDIA=screen>
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 <head>
 <title>Under construction</title>
 </head>
