updated and using bulma

--- a/index.html
+++ b/index.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html>
-    <LINK REL=StyleSheet HREF="index.css" TYPE="text/css" MEDIA=screen>
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
-<head>
-<title>Under construction</title>
-</head>
-<body>
-<h1>This page is under construction!</h1>
-<p>By Heurican.</p>
-<div id="link">
-    <a href="https://www.github.com/heurican"> <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png"> </a>
-</div>
-
-
-</body>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Hello Bulma!</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+  </head>
+  <body>
+  <section class="section">
+    <div class="container">
+      <h1 class="title">
+        Hello World
+      </h1>
+      <p class="subtitle">
+        My first website with <strong>Bulma</strong>!
+      </p>
+    </div>
+  </section>
+  </body>
 </html>
