updated with added navbar functionality

--- a/index.html
+++ b/index.html
@@ -3,18 +3,23 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Hello Bulma!</title>
+    <title></title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
   </head>
   <body>
   <section class="section">
     <div class="container">
-      <h1 class="title">
-        Hello World
-      </h1>
-      <p class="subtitle">
-        My first website with <strong>Bulma</strong>!
-      </p>
+      <nav class="navbar is-primary"
+      role="navigation"
+      aria-label="main navigation">
+      <div class="navbar-brand">
+        <a item="navbar-item is-uppercase" name="Blah" href="#"></a>
+        
+        <a role="navbar-button" class="navbar-about" aria-label="menu" aria-expanded="false"></a>
+
+        <a role 
+      </div>
+      </nav>
     </div>
   </section>
   </body>
