updated landing page

--- a/index.html
+++ b/index.html
@@ -15,9 +15,12 @@
       <div class="navbar-brand">
         <a item="navbar-item is-uppercase" name="Blah" href="#"></a>
         
-        <a role="navbar-button" class="navbar-about" aria-label="menu" aria-expanded="false"></a>
+        <a role="navbar-button" class="navbar-about" aria-label="menu" aria-expanded="false">
+          <span aria-hidden="true"></span>
+          <span aria-hidden="true"></span>
+          <span aria-hidden="true"></span>
+        </a>
 
-        <a role 
       </div>
       </nav>
     </div>
